--- a/HrPortalV2.Web/Views/Shared/_LoginPartial.cshtml
+++ b/HrPortalV2.Web/Views/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
     }
     else
     {
-    profilePhoto = "/uploads/profiles/";
+    profilePhoto = "/uploads/profiles/" + profilePhoto;
     }
 
     
@@ -52,7 +52,12 @@
                             <strong>@ViewBag.MessageCount Yeni </strong> Mesajınız Var
 
                         </h3>
-                        <a href="app_inbox.html">tümünü göster</a>
+                        @if (User.IsInRole("Candidate"))
+                        {
+                        <a asp-controller="Messages" asp-action="MyMessagesSentToMyResumes">tümünü göster</a>
+                        } else {
+                        <a asp-controller="Messages" asp-action="MyMessagesSentToMyCompanies">tümünü göster</a>
+                        }
                     </li>
                     <li>
                         <ul class="dropdown-menu-list scroller" style="height: 275px;" data-handle-color="#637283">
@@ -63,7 +68,7 @@
                                     <li>
                                         <a href="#">
                                             <span class="photo">
-                                                <img src="@profilePhoto" class="img-circle" alt="">
+                                                <img src="@profilePhoto" class="img-circle" alt="" style="width:40px;">
                                             </span>
                                             <span class="subject">
                                                 <span class="from"> @item.FromName </span>
@@ -85,7 +90,7 @@
             <li class="dropdown dropdown-user dropdown-dark">
                 <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
 
-                    <img alt="Profil Fotoğrafım" class="img-circle" src="@profilePhoto">
+                    <img alt="Profil Fotoğrafım" class="img-circle" src="@profilePhoto" style="width:40px;">
                     <span class="username username-hide-mobile">@UserManager.GetUserName(User)</span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-default">
