bug fixes (to be continued)

--- a/HrPortalV2.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@ License: You must have a valid license purchased only from themeforest(the above
         <div class="page-header-inner ">
             <!-- BEGIN LOGO -->
             <div class="page-logo" style="background-color:#ffffff;position:relative;margin-top:-15px">
-                <a href="index.html">
+                <a href="/">
                     <img src="/images/logo_bilisimkariyer.png" alt="logo" class="logo-default" width="150" style="background-color:#ffffff" />
                 </a>
                 <div class="menu-toggler sidebar-toggler">
